--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
+/* Tailwind CSS */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 /* Global Styles */
 * {
   margin: 0;
@@ -6,7 +15,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', 'Roboto', sans-serif;
   line-height: 1.6;
   color: #333;
   background-color: #f5f6fa;
